--- a/src/app.html
+++ b/src/app.html
@@ -16,5 +16,11 @@
     </head>
     <body data-sveltekit-preload-data="hover">
         <div style="display: contents">%sveltekit.body%</div>
+
+        <form name="leaderboard" netlify netlify-honeypot="bot-field" hidden>
+            <input type="hidden" name="form-name" value="leaderboard" />
+            <input type="text" name="playerName" />
+            <input type="text" name="time" />
+        </form>
     </body>
 </html>
